--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ VERIFY_TOKEN=oc_celltek_chatbot
 # URL where you host this code
 # You can use a tunneling service or Heroku ex: https://mystic-wind-83.herokuapp.com
 # It must be https, and without trailing slash.
-APP_URL=https://5a5a-41-47-0-46.ngrok-free.app
+APP_URL=https://6778-197-33-240-218.ngrok-free.app
 
 # URL of your website where the "shop now" is located
 # Can be the same as your app domain URL ex: https://www.originalcoastclothing.com/
