--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,9 @@
     "ecmaVersion": 2018
   },
   "rules": {
-    "no-console": "off"
+    "no-console": "off",
+    "prettier/prettier": ["error",{
+      "endOfLine": "auto"}
+    ]
   }
 }
