--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ VERIFY_TOKEN=oc_celltek_chatbot
 # URL where you host this code
 # You can use a tunneling service or Heroku ex: https://mystic-wind-83.herokuapp.com
 # It must be https, and without trailing slash.
-APP_URL= https://37b4-41-47-166-32.ngrok-free.app
+APP_URL= https://a969-41-47-166-32.ngrok-free.app
 
 # URL of your website where the "shop now" is located
 # Can be the same as your app domain URL ex: https://www.originalcoastclothing.com/
